--- a/test/unit/tox.ini
+++ b/test/unit/tox.ini
@@ -11,4 +11,4 @@ skipsdist = True
 commands = pytest
 deps = -rrequirements.txt
 passenv = NCS_DIR
-setenv = PYTHONPATH = {env:NCS_DIR:}/src/ncs/pyapi:../../python
+setenv = PYTHONPATH = {env:NCS_DIR:}/src/ncs/pyapi:../../python:../../drned-skeleton
