--- a/test/unit/tox.ini
+++ b/test/unit/tox.ini
@@ -4,11 +4,10 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py36, py38
+envlist = py27, py36, py38, py39, py310
 skipsdist = True
 
 [testenv]
 commands = pytest
 deps = -rrequirements.txt
-passenv = NCS_DIR
-setenv = PYTHONPATH = {env:NCS_DIR:}/src/ncs/pyapi:../../python:../../drned-skeleton
+setenv = PYTHONPATH = ../../python:../../drned-skeleton
